; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_flv_output_stop.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-outputs/extr_flv-output.c_flv_output_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flv_output = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @flv_output_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flv_output_stop(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.flv_output*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.flv_output*
  store %struct.flv_output* %7, %struct.flv_output** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = sdiv i32 %8, 1000
  %10 = load %struct.flv_output*, %struct.flv_output** %5, align 8
  %11 = getelementptr inbounds %struct.flv_output, %struct.flv_output* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.flv_output*, %struct.flv_output** %5, align 8
  %13 = getelementptr inbounds %struct.flv_output, %struct.flv_output* %12, i32 0, i32 1
  %14 = call i32 @os_atomic_set_bool(i32* %13, i32 1)
  ret void
}

declare dso_local i32 @os_atomic_set_bool(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
